RESOLVED FIXED208852
REGRESSION(r258182): [GTK] Remove reference to unrequestedTextCheckingSequence
https://bugs.webkit.org/show_bug.cgi?id=208852
Summary REGRESSION(r258182): [GTK] Remove reference to unrequestedTextCheckingSequence
Diego Pino
Reported 2020-03-10 03:10:18 PDT
REGRESSION(r258182): [GTK] Remove reference to unrequestedTextCheckingSequence
Attachments
Patch (1.60 KB, patch)
2020-03-10 03:13 PDT, Diego Pino
no flags
Patch (1.62 KB, patch)
2020-03-10 04:16 PDT, Diego Pino
no flags
Diego Pino
Comment 1 2020-03-10 03:13:12 PDT
Carlos Garcia Campos
Comment 2 2020-03-10 04:04:52 PDT
Comment on attachment 393129 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=393129&action=review > Source/WebKit/ChangeLog:9 > + unrequestedTextCheckingSequence was removed in r258182. This variable > + was still used in an assertion, which broke GTK Debug build. There's weird indentation here.
Diego Pino
Comment 3 2020-03-10 04:16:59 PDT
WebKit Commit Bot
Comment 4 2020-03-10 04:49:00 PDT
Comment on attachment 393133 [details] Patch Clearing flags on attachment: 393133 Committed r258195: <https://trac.webkit.org/changeset/258195>
WebKit Commit Bot
Comment 5 2020-03-10 04:49:01 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2020-03-10 04:49:18 PDT
Note You need to log in before you can comment on or make changes to this bug.