REGRESSION(r258182): [GTK] Remove reference to unrequestedTextCheckingSequence https://bugs.webkit.org/show_bug.cgi?id=208852

Reviewed by Carlos Garcia Campos.

unrequestedTextCheckingSequence was removed in r258182. This variable
was still used in an assertion, which broke GTK Debug build.

* UIProcess/gtk/TextCheckerGtk.cpp:
(WebKit::TextChecker::requestCheckingOfString):


Canonical link: https://commits.webkit.org/221782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258195 268f45cc-cd09-0410-ab3c-d52691b4dbfc